--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
         "youshido/graphql": "v1.4.3.2",
         "laravel/framework": "^5.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6",
+        "mockery/mockery": "^0.9.6",
+        "symfony/var-dumper": "^3.2"
+    },
     "autoload": {
         "psr-4": {
             "AlexBowers\\GraphQL\\": "src/"
